# Anime-Stats

./: AdvFilterFrame.cpp  AdvFilterFrame.hpp  AdvSortFrame.cpp  AdvSortFrame.hpp  AnalysisBox.cpp  AnalysisBox.hpp  AnalysisPanel.cpp  AnalysisPanel.hpp  AnalysisTextBox.cpp  AnalysisTextBox.hpp  App.cpp  App.hpp  AppIDs.cpp  AppIDs.hpp  CMakeLists.txt  ColorOptionsDlg.cpp  ColorOptionsDlg.hpp  CreateCommands.hpp  CustomEditableListBox.hpp  CustomGridCellEditors.cpp  CustomGridCellEditors.hpp  DataGrid.cpp  DataGrid.hpp  DataPanel.cpp  DataPanel.hpp  DbFilter.cpp  EditTagDialog.cpp  EditTagDialog.hpp  FilterStructs.cpp  FilterStructs.hpp  GridCellDateEditor.cpp  GridCellDateEditor.hpp  GroupStatsDlg.cpp  GroupStatsDlg.hpp  Helpers.cpp  Helpers.hpp  MainFrame.cpp  MainFrame.hpp  OpenDbDlg.cpp  OpenDbDlg.hpp  (+22 more)
CMake/Modules/: FindSQLite3 License.txt
cppw/: Sqlite3.hpp
cppw/Sqlite3/: Sqlite3Connection.cpp  Sqlite3Connection.hpp  Sqlite3Exception.cpp  Sqlite3Exception.hpp  Sqlite3Result.cpp  Sqlite3Result.hpp  Sqlite3Statement.cpp  Sqlite3Statement.hpp
sql/: BasicSelect.cpp  BasicSelect.hpp  CreateCommands.cpp  basicSelect.sql  create.sql  create_p1.sql  create_p2.sql  create_p3.sql  create_p4.sql
src/: AdvFilterFrame.cpp  AdvFilterFrame.hpp  AdvSortFrame.cpp  AdvSortFrame.hpp  AnalysisBox.cpp  AnalysisBox.hpp  AnalysisPanel.cpp  AnalysisPanel.hpp  App.cpp  App.hpp  AppIDs.cpp  AppIDs.hpp  ColorOptionsDlg.cpp  ColorOptionsDlg.hpp  CustomEditableListBox.hpp  CustomGridCellEditors.cpp  CustomGridCellEditors.hpp  DataGrid.cpp  DataGrid.hpp  DataPanel.cpp  DataPanel.hpp  DbFilter.cpp  DbFilter.hpp  EditTagDialog.cpp  EditTagDialog.hpp  FilterStructs.hpp  GroupStatsDlg.cpp  GroupStatsDlg.hpp  Helpers.cpp  Helpers.hpp  LegalDlg.cpp  LegalDlg.hpp  MainFrame.cpp  MainFrame.hpp  QuickFilter.cpp  QuickFilter.hpp  Settings.cpp  Settings.hpp  SortStruct.hpp  SqlGridCommand.cpp  (+10 more)
src/cppw/: Sqlite3.hpp
src/cppw/Sqlite3/: Sqlite3Connection.cpp  Sqlite3Connection.hpp  Sqlite3Exception.cpp  Sqlite3Exception.hpp  Sqlite3Result.cpp  Sqlite3Result.hpp  Sqlite3Statement.cpp  Sqlite3Statement.hpp
src/sql/: BasicSelect.cpp  BasicSelect.hpp  CreateCommands.cpp  CreateCommands.hpp  SqlStrings.cpp  SqlStrings.hpp
